Remove mutable list from AST